--- a/styles/header.css
+++ b/styles/header.css
@@ -18,7 +18,7 @@
             width: 1280px;
             height: 100%;
             transform: translateX(-50%);
-            background: linear-gradient(#cacaca 0%, rgba(0, 0, 0, 0) 100%);
+            background: linear-gradient(#4e4e4e 0%, rgba(0, 0, 0, 0) 90%);
         }
     }
 
